Update to Java 21 and GraalVM libraries 24.1.2