@@ -18,7 +18,7 @@
    <parent>
       <groupId>org.eclipse.esmf</groupId>
       <artifactId>esmf-parent</artifactId>
-      <version>17</version>
+      <version>18</version>
    </parent>
 
    <artifactId>esmf-sdk-parent</artifactId>
@@ -78,26 +78,6 @@
       <relative-native-config-path>core/esmf-native-support/src-gen/main/resources/META-INF/native-image/${project.groupId}/esmf-native-support</relative-native-config-path>
       <!-- The path to the native configs as it is reachable from the submodules -->
       <native-config-path>${project.basedir}/../../${relative-native-config-path}</native-config-path>
-
-      <!-- Override dependency versions until they are updated in esmf-parent -->
-      <graph-support-version>1.5.0</graph-support-version>
-      <junit-jupiter-version>5.12.0</junit-jupiter-version>
-      <log4j-version>2.24.3</log4j-version>
-      <logback-version>1.5.17</logback-version>
-      <mojo-executor-version>2.4.1</mojo-executor-version>
-      <slf4j-api-version>2.0.17</slf4j-api-version>
-      <spring-boot-version>3.4.3</spring-boot-version>
-      <tika-version>3.1.0</tika-version>
-      <validation-api-version>3.1.1</validation-api-version>
-      <vavr-version>0.10.6</vavr-version>
-
-      <flatten-maven-plugin-version>1.7.0</flatten-maven-plugin-version>
-      <maven-clean-plugin-version>3.4.1</maven-clean-plugin-version>
-      <maven-compiler-plugin-version>3.14.0</maven-compiler-plugin-version>
-      <maven-deploy-plugin-version>3.1.4</maven-deploy-plugin-version>
-      <maven-install-plugin-version>3.1.4</maven-install-plugin-version>
-      <native-maven-plugin-version>0.10.5</native-maven-plugin-version>
-      <wagon-maven-plugin-version>2.0.2</wagon-maven-plugin-version>
    </properties>
 
    <dependencyManagement>
@@ -269,10 +249,26 @@
                            <regex>.*GraalVM.*</regex>
                            <regexMessage>A GraalVM JDK is required to build this project</regexMessage>
                         </requireProperty>
+                        <requireJavaVersion>
+                           <version>21</version>
+                           <message>Java 21 or newer is required to build this project</message>
+                        </requireJavaVersion>
                      </rules>
                   </configuration>
                </execution>
             </executions>
+         </plugin>
+
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+               <compilerArgs>
+                  <arg>-proc:full</arg>
+               </compilerArgs>
+               <showWarnings>false</showWarnings>
+               <showDeprecation>false</showDeprecation>
+            </configuration>
          </plugin>
 
          <plugin>
